carroll: tabs fixed and aligned

--- a/sites/default/themes/starfleet/css/nodes.css
+++ b/sites/default/themes/starfleet/css/nodes.css
@@ -82,7 +82,6 @@
 }
 
 .node .content /* Node's content wrapper */ {
-  clear: left;
 }
 
 .node ul.links /* Node links. See also the ul.links declaration in the pages.css. */ {
